// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`routes/components/settings/SettingsFooter.tsx app version should show development app version 1`] = `
<span
  aria-label="app-version"
>
  Gitify 
  dev
</span>
`;

exports[`routes/components/settings/SettingsFooter.tsx app version should show production app version 1`] = `
<span
  aria-label="app-version"
>
  Gitify 
  v0.0.1
</span>
`;

exports[`routes/components/settings/SettingsFooter.tsx update available visual indicator new version available 1`] = `
<span
  title="New version available"
>
  <svg
    aria-hidden="true"
    class="text-yellow-500 dark:text-yellow-300"
    fill="currentColor"
    focusable="false"
    height="12"
    style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
    viewBox="0 0 12 12"
    width="12"
  >
    <path
      d="M4.855.708c.5-.896 1.79-.896 2.29 0l4.675 8.351a1.312 1.312 0 0 1-1.146 1.954H1.33A1.313 1.313 0 0 1 .183 9.058ZM7 7V3H5v4Zm-1 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2Z"
    />
  </svg>
</span>
`;

exports[`routes/components/settings/SettingsFooter.tsx update available visual indicator using latest version 1`] = `
<span
  title="You are using the latest version"
>
  <svg
    aria-hidden="true"
    class="text-green-500"
    fill="currentColor"
    focusable="false"
    height="12"
    style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
    viewBox="0 0 12 12"
    width="12"
  >
    <path
      d="M6 0a6 6 0 1 1 0 12A6 6 0 0 1 6 0Zm-.705 8.737L9.63 4.403 8.392 3.166 5.295 6.263l-1.7-1.702L2.356 5.8l2.938 2.938Z"
    />
  </svg>
</span>
`;
